trunk/src/emcpas.h

extern "C" bool getEStop();
extern "C" bool getMachineOn();
extern "C" int getTaskMode();
extern "C" bool getMistOn();
extern "C" bool getFloodOn();
extern "C" bool getLubeOn();
extern "C" int getSpindle();
extern "C" bool getBrakeOn();
extern "C" int getFeedOverride();