trunk/src/emc2pas.pas


function  getFeedOverride: Longint; cdecl; external;
function  getEStop: Boolean; cdecl; external;
function  getMachineOn: Boolean; cdecl; external;
function  getTaskMode: Longint; cdecl; external;
function  getMistOn: Boolean; cdecl; external;
function  getFloodOn: Boolean; cdecl; external;
function  getLubeOn: Boolean; cdecl; external;
function  getSpindle: Longint; cdecl; external;
function  getBrakeOn: Boolean; cdecl; external;

implementation

end.
